tests/fails/f40.t

terra foo()
  return  { [3] = 4 }
end
foo()